Dashboards modificados con nuevo html
falta solucionar visual de modal de addPuesto

--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -1,5 +1,21 @@
-﻿<h1>Dashboard de Empresa</h1>
-<div ui-view="menu@"></div>
+﻿<nav>
+    <a href="index.html">UN<span>MUNDO</span></a>
+    <ul>
+        <a href="#">
+            <li><span class="icon-earth icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><span class="icon-mail4 icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><img src="img/oc.jpg" alt=""></li>
+        </a>
+        <a href="">
+            <li><span class="icon-exit icono_de"></span></li>
+        </a>
+    </ul>
+</nav>
+<aside ui-view="menu@"></aside>
 
 <div ui-view="contenido@"></div>
 
