--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
@@ -1,4 +1,17 @@
-﻿<h1>Menu de Empresa</h1>
-<md-button class="md-raised md-warn" ui-sref="empresa.ofertas.add">
-    Nueva Oferta
-</md-button>
+﻿<div class="p_info">
+    <img src="img/oc.jpg" alt="">
+    <div class="t_info">
+        <h5>bienvenido</h5>
+        <h2>OverCode</h2>
+    </div>
+</div>
+<div class="menu_s">
+    <ul>
+
+        <h1>OFERTAS</h1>
+
+        <a ui-sref="empresa.ofertas.add">
+            <li><span class="icon-bullhorn"></span> Agregar ofertas</li>
+        </a>
+    </ul>
+</div>
