--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -59,7 +59,7 @@
                 <h3>Subir PDF de su curriculum.</h3>
                 <input type="file" name="foto" class="archivos" style="margin:2em 0;">
                 <br>
-                <md-button class="md-primary md-raised" style="background:rgb(62, 138, 187);">Guardar cambios</md-button>
+                <!--<md-button class="md-primary md-raised" style="background:rgb(62, 138, 187);">Guardar cambios</md-button>-->
             </form>
         </md-whiteframe>
     </md-container>
