--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -10,7 +10,7 @@
         <a href="#">
             <li><img src="img/oc.jpg" alt=""></li>
         </a>
-        <a href="">
+        <a ng-click="logOut()">
             <li><span class="icon-exit icono_de"></span></li>
         </a>
     </ul>
