--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
@@ -10,7 +10,7 @@
 
         <h1>OFERTAS</h1>
 
-        <a href="#">
+        <a ui-sref="profesional.ofertas">
             <li><span class="icon-bullhorn"></span> Ver ofertas</li>
         </a>
     </ul>
