agrego boton para detalle en la oferta con su routing respectivo

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <h3>{{ oferta.Descripcion }}</h3>
-                            <a href="#">ver más</a>
+                            <a ui-sref="oferta.detalle({oferta.Id})">ver más</a>
                         </div>
                     </article>
                 </div>
