--- a/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
@@ -113,84 +113,10 @@
             </div>
         </div>
 
-        <div layout="row">
-            <div flex="grow">                
-                <!--#region fpaz: del listado de Requisitos-->
-                <div layout="row">
-                    <div flex="30">
-                        <md-input-container>
-                            <md-select placeholder="Seleccionar Tipo de Requisito" ng-model="requisito.TipoRequisito">
-                                <md-option ng-value="tipoReq" ng-repeat="tipoReq in tiposRequisito">{{ tipoReq.Nombre }}</md-option>
-                            </md-select>
-                        </md-input-container>
-                    </div>
-                    <div flex="20">
-                        <md-input-container>
-                            <label>Valor</label>
-                            <input ng-model="requisito.Valor">
-                        </md-input-container>
-                    </div>
-                    <div flex="15">                        
-                        <md-radio-group ng-model="requisito.Excluyente">
-                            <md-radio-button value=true class="md-primary">Requisito Obligatorio</md-radio-button>
-                            <md-radio-button value=false>Requisito Desable</md-radio-button>
-                        </md-radio-group>
-                    </div>
-                    <div flex="15">
-                        <md-input-container layout="row" flex="grow" style="margin-left: 42px">
-                            <div flex>
-                                <md-button class="md-raised md-primary btn-fw m-b-sm" ng-click="agregarRequisito(requisito)">Agregar Requisito</md-button>
-                            </div>
-                        </md-input-container>
-                    </div>
-                    <div flex="5"></div> 
-                    <div flex="15">
-                        <md-input-container layout="row" flex="grow">
-                            <div flex>
-                                <md-button class="md-raised md-warn btn-fw m-b-sm md-button md-default-theme" ng-click="cancelarRequisito()">Cancelar</md-button>
-                            </div>
-                        </md-input-container>
-                    </div>
-                </div>
-                <!--#endregion-->
-            </div>
-            <div flex="20">
-                <!--#region fpaz: listado partidos cargados de la fecha-->
-                <table ng-table="tableParams" class="table ng-table-responsive">
-                                    <tr ng-repeat="requisito in puesto.Requisitos">
-                                        <td data-title="'Requisitos Cargados'">
-                                            <div>
-                                                <div>
-                                                    <div layout="row">
-                                                        <md-input-container layout="row" flex="50">
-                                                            <div flex="90">
-                                                                <label>Tipo de Requisito</label>
-                                                                <input class="form-control md-input" ng-model="requisito.TipoRequisito.Nombre" ng-disabled="true">
-                                                            </div>
-                                                        </md-input-container>
-                                                        <md-input-container layout="row" flex="25">
-                                                            <div flex="90">
-                                                                <label>Valor</label>
-                                                                <input class="form-control md-input" ng-model="requisito.Valor" ng-disabled="true">
-                                                            </div>
-                                                        </md-input-container>
-                                                        <md-input-container layout="row" flex="25">
-                                                            <div flex="90">
-                                                                <label>Valor</label>
-                                                                <input class="form-control md-input" ng-model="requisito.Excluyente" ng-disabled="true">
-                                                            </div>
-                                                        </md-input-container>
-                                                    </div>
-                                                </div>                                               
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </table>
-
-                <!--#endregion-->
-            </div>
-        </div>
-    </md-dialog-content>
+        <!--#region fpaz Tabla de Requisitos-->        
+        
+        <!--#endregion-->
+</md-dialog-content>
     <md-dialog-actions>
         <md-button ng-click="addPuesto(puesto)">
             Agregar Puesto
@@ -199,5 +125,34 @@
             Cancelar
         </md-button>
     </md-dialog-actions>    
+
+    <!--<md-table-container>
+        <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
+            <thead md-head>
+                <tr md-row>
+                    <th md-column md-order-by="nameToLower"><span>Dessert (100g serving)</span></th>
+                    <th md-column md-numeric md-order-by="calories.value"><span>Calories</span></th>
+                    <th md-column md-numeric>Fat (g)</th>
+                    <th md-column md-numeric>Carbs (g)</th>
+                    <th md-column md-numeric>Protein (g)</th>
+                    <th md-column md-numeric>Sodium (mg)</th>
+                    <th md-column md-numeric>Calcium (%)</th>
+                    <th md-column md-numeric>Iron (%)</th>
+                </tr>
+            </thead>
+            <tbody md-body>
+                <tr md-row md-select="tipoReq" md-select-id="Nombre" md-auto-select ng-repeat="tipoReq in tiposRequisito">
+                    <td md-cell>{{tipoReq.Nombre}}</td>
+                    <td md-cell>Hola</td>
+                    <td md-cell>{{dessert.fat.value | number: 1}}</td>
+                    <td md-cell>{{dessert.carbs.value}}</td>
+                    <td md-cell>{{dessert.protein.value | number: 1}}</td>
+                    <td md-cell>{{dessert.sodium.value}}</td>
+                    <td md-cell>{{dessert.calcium.value}}{{dessert.calcium.unit}}</td>
+                    <td md-cell>{{dessert.iron.value}}{{dessert.iron.unit}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </md-table-container>-->
 </md-dialog>
 
